--- a/localisation/More_Home_Systems_l_polish.yml
+++ b/localisation/More_Home_Systems_l_polish.yml
@@ -61,7 +61,14 @@
  reshtar_system_DESC:0 "The Resh´Tar system with three habitable planets orbiting their sun on the same orbit though now long abandoned seems to have once been subject of an experiment of stellar scale.\n\nHomeworld - Size 16\n\n1 Sun, 2 Habitable Planets, 12 Asteroids\n\n$system_initializer_DESC$"
  durinsforge_system_NAME:0 "Durin´s Forge"
  durinsforge_system_DESC:0 "Durin´s Forge - WORK IN PROGRESS - NO EVENTS IN YET"
+ me_tikkun_system_NAME:0 "Tikkun System"
+ me_tikkun_system_DESC:0 "Homesystem of the Quarians of the Mass Effect universe.\n\nHomeworld - Size 16\n\n1 Sun, 1 Toxic World, 1 Gas Giant, 1 Barren World, 7 Asteroids\n\n$system_initializer_DESC$"
+ 
  
  #New Planet Classes
  planetary_ring_nuked:0 "Tomb World with Ring"
  planetary_ring_nuked_desc:0 "A rocky world with a nitrogen-oxygen atmosphere. It is currently experiencing something similar to a nuclear winter, with dense layers of sooty aerosols in the atmosphere. High levels of surface radiation and large cracks in the planetary crust spitting our fire and toxic gases that make life impossible. It is orbited by an ancient but highly advanced Ring World."
+ pc_mhs_durin_nuked_nocolonize:0 "Tomb World with destroyed Ring"
+ pc_mhs_durin_nuked_nocolonize_desc:0 "A rocky world with a nitrogen-oxygen atmosphere. It is currently experiencing something similar to a nuclear winter, with dense layers of sooty aerosols in the atmosphere. High levels of surface radiation and large cracks in the planetary crust spitting our fire and toxic gases that make life impossible. It is orbited by an ancient destroyed Ring World."
+ pc_mhs_durin_nuked_colonize:0 "Tomb World with destroyed Ring"
+ pc_mhs_durin_nuked_colonize_desc:0 "A rocky world with a nitrogen-oxygen atmosphere. It is currently experiencing something similar to a nuclear winter, with dense layers of sooty aerosols in the atmosphere. High levels of surface radiation and large cracks in the planetary crust spitting our fire and toxic gases that make life impossible. It is orbited by an ancient destroyed Ring World."
