--- a/localisation/More_Home_Systems_l_polish.yml
+++ b/localisation/More_Home_Systems_l_polish.yml
@@ -46,6 +46,13 @@
  pc_mhs_ringworld_seam_damaged:0 "Świat pierścieniowy"
  pc_mhs_ringworld_seam_damaged_desc:0 "Gigantyczna "opaska" otaczająca miejscowe słońce.\n\nTen odcinek superkonstrukcji wygląda na nieodwracalnie uszkodzony."
  
+ pc_mhs_nuked:0 "Świat cmentarny"
+ pc_mhs_nuked_desc:0 "Skaliste ciało niebieskie z atmosferą azotowo-tlenową. Aktualnie panuje na nim zima nuklearna. W atmosferze znajdują się gęste warstwy aerozoli z dużą zawartością sadzy, a na powierzchni panuje silne promieniowanie."
+ pc_mhs_nuked_tile:0 "Pustkowie"
+ pc_mhs_nuked_tile_desc:0 "Dziki obszar spustoszony przez wojnę. Natężenie promieniowania jest na tyle niskie, że większość organizmów żywych może przetrwać."
+ pc_mhs_nuked_by_asteroids_tile:0 "Tundra"
+ pc_mhs_nuked_by_asteroids_tile_desc:0 "Zimne, wietrzne stepy z ubogą roślinnością."
+ 
  #################################################################################
  # PASTE HERE - Here starts the purely english part of the Loc File - PASTE HERE #
  #################################################################################
@@ -69,6 +76,8 @@
  #New Planet Classes
  planetary_ring_nuked:0 "Tomb World with Ring"
  planetary_ring_nuked_desc:0 "A rocky world with a nitrogen-oxygen atmosphere. It is currently experiencing something similar to a nuclear winter, with dense layers of sooty aerosols in the atmosphere. High levels of surface radiation and large cracks in the planetary crust spitting our fire and toxic gases that make life impossible. It is orbited by an ancient but highly advanced Ring World."
+ pc_mhs_nuked_by_asteroids:0 "Tomb World"
+ pc_mhs_nuked_by_asteroids_desc:0 "A rocky world with a nitrogen-oxygen atmosphere. It is currently experiencing an impact winter, with dense layers of sooty aerosols in the atmosphere."
  pc_mhs_durin_nuked_nocolonize:0 "Tomb World with destroyed Ring"
  pc_mhs_durin_nuked_nocolonize_desc:0 "A rocky world with a nitrogen-oxygen atmosphere. It is currently experiencing something similar to a nuclear winter, with dense layers of sooty aerosols in the atmosphere. High levels of surface radiation and large cracks in the planetary crust spitting our fire and toxic gases that make life impossible. It is orbited by an ancient destroyed Ring World."
  pc_mhs_durin_nuked_colonize:0 "Tomb World with destroyed Ring"
