--- a/localisation/More_Home_Systems_l_french.yml
+++ b/localisation/More_Home_Systems_l_french.yml
@@ -46,6 +46,13 @@
  pc_mhs_ringworld_seam_damaged:0 "Monde anneau"
  pc_mhs_ringworld_seam_damaged_desc:0 "Une immense bague entourant le soleil du système.\n\nCette section de la superstructure semble impossible à réparer."
  
+ pc_mhs_nuked:0 "Monde tombeau"
+ pc_mhs_nuked_desc:0 "Un monde rocheux avec une atmosphère composée d'azote et d'oxygène. Il vit une période d'hiver nucléaire, avec de denses couches d'aérosols charbonneux dans l'atmosphère. Radiations de surface de grande intensité."
+ pc_mhs_nuked_tile:0 "Terrain en friche"
+ pc_mhs_nuked_tile_desc:0 "Des terrains difficiles et sévèrement endommagés par la guerre. Les niveaux de radiation sont suffisamment bas pour supporter la plupart des formes de vie."
+ pc_mhs_nuked_by_asteroids_tile:0 "Terrain toundra"
+ pc_mhs_nuked_by_asteroids_tile_desc:0 "Des steppes froides et balayées par les vents à la végétation éparse."
+ 
  #################################################################################
  # PASTE HERE - Here starts the purely english part of the Loc File - PASTE HERE #
  #################################################################################
@@ -69,6 +76,8 @@
  #New Planet Classes
  planetary_ring_nuked:0 "Tomb World with Ring"
  planetary_ring_nuked_desc:0 "A rocky world with a nitrogen-oxygen atmosphere. It is currently experiencing something similar to a nuclear winter, with dense layers of sooty aerosols in the atmosphere. High levels of surface radiation and large cracks in the planetary crust spitting our fire and toxic gases that make life impossible. It is orbited by an ancient but highly advanced Ring World."
+ pc_mhs_nuked_by_asteroids:0 "Tomb World"
+ pc_mhs_nuked_by_asteroids_desc:0 "A rocky world with a nitrogen-oxygen atmosphere. It is currently experiencing an impact winter, with dense layers of sooty aerosols in the atmosphere."
  pc_mhs_durin_nuked_nocolonize:0 "Tomb World with destroyed Ring"
  pc_mhs_durin_nuked_nocolonize_desc:0 "A rocky world with a nitrogen-oxygen atmosphere. It is currently experiencing something similar to a nuclear winter, with dense layers of sooty aerosols in the atmosphere. High levels of surface radiation and large cracks in the planetary crust spitting our fire and toxic gases that make life impossible. It is orbited by an ancient destroyed Ring World."
  pc_mhs_durin_nuked_colonize:0 "Tomb World with destroyed Ring"
