--- a/localisation/More_Home_Systems_l_german.yml
+++ b/localisation/More_Home_Systems_l_german.yml
@@ -46,6 +46,13 @@
  pc_mhs_ringworld_seam_damaged:0 "Ringwelt"
  pc_mhs_ringworld_seam_damaged_desc:0 "Ein enormes Band, das die Sonne des Systems umgibt.\n\nDieser Abschnitt der Suprastruktur scheint irreparabel beschädigt zu sein."
 
+ pc_mhs_nuked:0 "Tote Welt"
+ pc_mhs_nuked_desc:0 "Eine felsige Welt mit einer Stickstoff-Sauerstoff-Atmosphäre. Hier herrscht derzeit ein nuklearer Winter, und die Atmosphäre ist mit dichten Schichten rußiger Aerosole verschmutzt. Starke Oberflächenstrahlung."
+ pc_mhs_nuked_tile:0 "Ödland-Gelände"
+ pc_mhs_nuked_tile_desc:0 "Raues, vom Krieg zerklüftetes Gelände. Die Strahlung ist niedrig genug, um die meisten Lebensformen zu unterstützen."
+ pc_mhs_nuked_by_asteroids_tile:0 "Tundra-Gelände"
+ pc_mhs_nuked_by_asteroids_tile_desc:0 "Kaltes und windgepeitschtes Steppengelände mit spärlicher Vegetation."
+ 
  #################################################################################
  # PASTE HERE - Here starts the purely english part of the Loc File - PASTE HERE #
  #################################################################################
@@ -69,6 +76,8 @@
  #New Planet Classes
  planetary_ring_nuked:0 "Tomb World with Ring"
  planetary_ring_nuked_desc:0 "A rocky world with a nitrogen-oxygen atmosphere. It is currently experiencing something similar to a nuclear winter, with dense layers of sooty aerosols in the atmosphere. High levels of surface radiation and large cracks in the planetary crust spitting our fire and toxic gases that make life impossible. It is orbited by an ancient but highly advanced Ring World."
+ pc_mhs_nuked_by_asteroids:0 "Tomb World"
+ pc_mhs_nuked_by_asteroids_desc:0 "A rocky world with a nitrogen-oxygen atmosphere. It is currently experiencing an impact winter, with dense layers of sooty aerosols in the atmosphere."
  pc_mhs_durin_nuked_nocolonize:0 "Tomb World with destroyed Ring"
  pc_mhs_durin_nuked_nocolonize_desc:0 "A rocky world with a nitrogen-oxygen atmosphere. It is currently experiencing something similar to a nuclear winter, with dense layers of sooty aerosols in the atmosphere. High levels of surface radiation and large cracks in the planetary crust spitting our fire and toxic gases that make life impossible. It is orbited by an ancient destroyed Ring World."
  pc_mhs_durin_nuked_colonize:0 "Tomb World with destroyed Ring"
