--- a/localisation/More_Home_Systems_l_english.yml
+++ b/localisation/More_Home_Systems_l_english.yml
@@ -91,7 +91,7 @@
  
  #Durins Hall
  mhs_durins_hall_title:0 "Visit Durin's Hall"
- mhs_durins_hall_desc:0 "We must find the our ancestral home, the Hall of Durin."
+ mhs_durins_hall_desc:0 "For a long time have the stars been a central part of our legends and what would be a more fitting start of our journey into the unknown than Durin's Folk visiting the most important star of our legends, the Hall of Durin."
 
  #Upon completing home system survey, starts event chain
  mhs_durin.3.name:0 "Durin's Legacy"
