--- a/localisation/More_Home_Systems_l_english.yml
+++ b/localisation/More_Home_Systems_l_english.yml
@@ -123,7 +123,7 @@
 
  #All blockers have been cleared.
  mhs_durin.10.name:0 "The Great Gateway"
- mhs_durin.10.desc:0 "We have cleared all the ruins. Now we can start restoring this planet to its former glory."
+ mhs_durin.10.desc:0 "In the last excavation area held an extraordinary secret. Our team has found a giant gateway to an underground network. We can only guess how far it stretches."
 
  #Starts Khazad Dum's Depths expedition
  mhs_durin.11.name:0 "The Mines of Durin"
