--- a/localisation/More_Home_Systems_l_english.yml
+++ b/localisation/More_Home_Systems_l_english.yml
@@ -101,11 +101,11 @@
  
  #Durin's halls system is visited, starts survey khazad dum
  mhs_durin.4.name:0 "The Hall of Durin"
- mhs_durin.4.desc:0 "We have reached the legendary 'Hall of Durin'. Our Scientists did not expect to find anything special there. But when first system scans reached them they were struck speechless. There is one planet orbiting its sun inside the habitable zone./n/nAnd there is more! It seems to be orbited by some kind of mega structure. We should investigate it as soon as possible."
+ mhs_durin.4.desc:0 "We have reached the legendary 'Hall of Durin'. Our Scientists did not expect to find anything special there. But when first system scans reached them they were struck speechless. There is one planet orbiting its sun inside the habitable zone.\n\nAnd there is more! It seems to be orbited by some kind of mega structure. We should investigate it as soon as possible."
 
  #Khazad Dum has been surveyed, starts surface expedition research project.
  mhs_durin.5.name:0 "Dwarven Origins"
- mhs_durin.5.desc:0 "A heavily damaged gigantic ring orbits a planet covered in dense clouds. High radiation values are measured by our probes. Our scientists already supected what became a certainty when our scienceship found a small object orbiting the planet. It turned out to be an ancient lifepod - in it the remains of its unfortunate passenger - a dwarf./n/n In ancient times Durin lead our people away from their home when a great disaster struck it. It was a long exodus beneath the stars until they found their new home. Though we always believed this ancient home to be somewhere on Erebor, lost to the ages, this must be Khazad Dum our ancient home."
+ mhs_durin.5.desc:0 "A heavily damaged gigantic ring orbits a planet covered in dense clouds. High radiation values are measured by our probes. Our scientists already supected what became a certainty when our scienceship found a small object orbiting the planet. It turned out to be an ancient lifepod - in it the remains of its unfortunate passenger - a dwarf.\n\n In ancient times Durin lead our people away from their home when a great disaster struck it. It was a long exodus beneath the stars until they found their new home. Though we always believed this ancient home to be somewhere on Erebor, lost to the ages, this must be Khazad Dum our ancient home."
 
  #Khazad Dum Surface Expedition Research
  KHAZAD_DUM_EXPEDITION_PROJECT:0 "Heritage of the Ancients"
@@ -125,11 +125,13 @@
 
  #All blockers have been cleared.
  mhs_durin.10.name:0 "The Great Gateway"
- mhs_durin.10.desc:0 "In the last excavation area held an extraordinary secret. Our team has found a giant gateway to an underground network. We can only guess how far it stretches."
+ mhs_durin.10.desc:0 "The last excavation area held an extraordinary secret. Our team has found a giant gateway to an underground network. At the moment we can only guess how far it stretches."
 
  #Starts Khazad Dum's Depths expedition
- mhs_durin.11.name:0 "The Mines of Durin"
- mhs_durin.11.desc:0 "In our efforts we have discovered what appears to be an ancient mine, we should see what lies inside."
+ KHAZAD_DUM_DEEPS_EXPEDITION_PROJECT:0 "The Mines of Durin"
+ KHAZAD_DUM_DEEPS_EXPEDITION_PROJECT_DESC:0 "In our efforts we have discovered what appears to be an ancient mine, we should see what lies inside."
+ mhs_durin.11.name:0 ""
+ mhs_durin.11.desc:0 ""
 
  #Discovers underground horrors who attacks
  mhs_durin.12.name:0 "The Horrors Below"
