--- a/localisation/More_Home_Systems_l_english.yml
+++ b/localisation/More_Home_Systems_l_english.yml
@@ -66,6 +66,8 @@
  mhs_reetii_system_DESC:0 "The Re´etii system, once center of an ancient empire lies in ruins. Their worlds have been burned and their biggest achievement - a giant ringworld - has been destroyed. Your species was once nothing more than pets in one of their zoos. You were lucky enough to outlive your former masters and now rule over the last habitable parts of your ringworld segment.\n\nHomeworld - Size 16\n\n$system_initializer_DESC$"
  mhs_reshtar_system_NAME:0 "Resh´Tar System"
  mhs_reshtar_system_DESC:0 "The Resh´Tar system with three habitable planets orbiting their sun on the same orbit though now long abandoned seems to have once been subject of an experiment of stellar scale.\n\nHomeworld - Size 16\n\n1 Sun, 2 Habitable Planets, 12 Asteroids\n\n$system_initializer_DESC$"
+ mhs_kholdan_system_NAME:0 "Kholdan System"
+ mhs_kholdan_system_DESC:0 "The Kholdan system is a trinary star system consisting of a small binary star system orbiting a red giant and his planets.\n\nHomeworld - Size 16\n\n3 Suns, 3 Molten Worlds, 1 Gas Giant, 2 Barren Worlds, 2 Toxic Worlds and  various Asteroids\n\n$system_initializer_DESC$"
  mhs_durinsforge_system_NAME:0 "Durin´s Forge"
  mhs_durinsforge_system_DESC:0 "Durin´s Forge - WORK IN PROGRESS - NO EVENTS IN YET"
  mhs_me_tikkun_system_NAME:0 "Tikkun System"
@@ -85,6 +87,81 @@
  pc_mhs_nuked_by_asteroids:0 "Tomb World"
  pc_mhs_nuked_by_asteroids_desc:0 "A rocky world with a nitrogen-oxygen atmosphere. It is currently experiencing an impact winter, with dense layers of sooty aerosols in the atmosphere."
  pc_mhs_durin_nuked_nocolonize:0 "Tomb World with destroyed Ring"
- pc_mhs_durin_nuked_nocolonize_desc:0 "A rocky world with a nitrogen-oxygen atmosphere. It is currently experiencing something similar to a nuclear winter, with dense layers of sooty aerosols in the atmosphere. High levels of surface radiation and large cracks in the planetary crust spitting our fire and toxic gases that make life impossible. It is orbited by an ancient destroyed Ring World."
+ pc_mhs_durin_nuked_nocolonize_desc:0 "A rocky world with a nitrogen-oxygen atmosphere. It is currently experiencing something similar to a nuclear winter, with dense layers of sooty aerosols in the atmosphere. High levels of surface radiation make life impossible. It is orbited by an ancient destroyed Ring World."
  pc_mhs_durin_nuked_colonize:0 "Tomb World with destroyed Ring"
- pc_mhs_durin_nuked_colonize_desc:0 "A rocky world with a nitrogen-oxygen atmosphere. It is currently experiencing something similar to a nuclear winter, with dense layers of sooty aerosols in the atmosphere. High levels of surface radiation and large cracks in the planetary crust spitting our fire and toxic gases that make life impossible. It is orbited by an ancient destroyed Ring World."
+ pc_mhs_durin_nuked_colonize_desc:0 "A rocky world with a nitrogen-oxygen atmosphere. It is currently experiencing something similar to a nuclear winter, with dense layers of sooty aerosols in the atmosphere. High levels of surface radiation make life impossible. It is orbited by an ancient destroyed Ring World."
+
+ #New Tile Blocker
+ tb_mhs_asteroid_crater:0 "£blocker  Asteroid Crater"
+ tb_mhs_asteroid_crater_desc:0 "This reminder of a large scale impact event marks the surrounding landscape."
+ 
+ #########################
+ # Durins Forge Questline#
+ #########################
+ 
+ #Upon completing home system survey, starts event chain
+ mhs_durin.3.name:0 "Durin's Legacy"
+ mhs_durin.3.desc:0 "Since ancient times our legends tell the story of Durin, our progenitor and King beneath the Stars. There are even stars in the sky that bear that name in his honor. One of them is Durin's Forge - the biggest of our three suns. Another one is Durin's Hall. Though it is neither the brightest star in the sky nor part of any important constellation. But is a place of legends and a worthy exploration target for our starting journey to the stars."
+
+ #Durins Hall Event Chain
+ mhs_durins_hall_title:0 "A Journey to the Stars"
+ mhs_durins_hall_desc:0 "For a long time have the stars been a central part of our legends and what would be a more fitting start of our journey into the unknown than Durin's Folk visiting the most important star of our legends, the 'Hall of Durin'."
+ 
+ #Durin's halls system is visited, starts survey khazad dum
+ mhs_durin.4.name:0 "The Hall of Durin"
+ mhs_durin.4.desc:0 "We have reached the legendary 'Hall of Durin'. Our Scientists did not expect to find anything special there. But when first system scans reached them they were struck speechless. There is one planet orbiting its sun inside the habitable zone.\n\nAnd there is more! It seems to be orbited by some kind of mega structure. We should investigate it as soon as possible."
+
+ #Khazad Dum has been surveyed, starts surface expedition research project.
+ mhs_durin.5.name:0 "Dwarven Origins"
+ mhs_durin.5.desc:0 "A heavily damaged gigantic ring orbits a planet covered in dense clouds. High radiation values are measured by our probes. Our scientists already supected what became a certainty when our scienceship found a small object orbiting the planet. It turned out to be an ancient lifepod - in it the remains of its unfortunate passenger - a dwarf.\n\n In ancient times Durin lead our people away from their home when a great disaster struck it. It was a long exodus beneath the stars until they found their new home. Though we always believed this ancient home to be somewhere on Erebor, lost to the ages, this must be Khazad Dum our ancient home."
+
+ #Khazad Dum Surface Expedition Research
+ KHAZAD_DUM_EXPEDITION_PROJECT:0 "Heritage of the Ancients"
+ KHAZAD_DUM_EXPEDITION_PROJECT_DESC:0 "In order to find out more about our distant past we have to find a way to establish a stable outpost on Khazad Dum. We will have to remove many obstacles to make this possible. The harsh environment and possibly deadly radiation are just two of them."
+
+ #Expedition Research is completed
+ mhs_durin.6.name:0 "Progress of Preparations"
+ mhs_durin.6.desc:0 "Our scientists came up with plans how to counter the threats our expedition will be faced with. Though it will not be very pleasant our personnel will have to wear heavy protective gear at all time when beeing outside their shielded habitat modules. All these protection measures will also increase production times ans costs for any building constructed. A suitable landing place where Radiation levels are within acceptable limits has been found as well."
+
+ #We should build a colony, starts colony mission
+ mhs_durin.8.name:0 "Reclaim what is Ours"
+ mhs_durin.8.desc:0 "It is time to establish an expeditionary outpost on [event_target:khazad_dum.GetName]. We still do not know what happened to our ancestors. What might have destroyed their world, laid their cities to ruins and brought their civilisation to collapse?"
+ 
+ #Clear the planet of all tile blockers (ruins)
+ mhs_durin.9.name:0 "Outpost Established"
+ mhs_durin.9.desc:0 "With our outpost established, it is time to begin the planned expeditions into the old ruins. We´ll also have to clear any obstacles that prevent our teams' movement along the way."
+ 
+ #All blockers have been cleared.
+ mhs_durin.10.name:0 "The Great Gateway"
+ mhs_durin.10.desc:0 "The last excavation area held an extraordinary secret. Our team has found a giant gateway to an underground network. At the moment we can only guess how far it stretches."
+ 
+ #Starts Khazad Dum's Depths expedition
+ KHAZAD_DUM_DEEPS_EXPEDITION_PROJECT:0 "The Mines of Durin"
+ KHAZAD_DUM_DEEPS_EXPEDITION_PROJECT_DESC:0 "In our efforts we have discovered what appears to be an ancient mine, we should see what lies inside."
+ mhs_durin.11.name:0 ""
+ mhs_durin.11.desc:0 ""
+
+ #Discovers underground horrors who attacks
+ mhs_durin.12.name:0 "The Horrors Below"
+ mhs_durin.12.desc:0 "Our expedition of the mine has gone horribly awry, a number of undescribable horrors seem to have awakened and made short work of our expedition team. They have now begun pouring out of the opening and are launching a viscious full scale assault"
+
+ #We lost the battle agains the horrors
+ mhs_durin.13.name:0 "Tragedy"
+ mhs_durin.13.desc:0 "Our numbers were too few too withstand the onslaught, now it is every man for himself."
+
+ #The horrors have begun rampaging throughout the planet killing off our population there.
+ mhs_durin.14.name:0 "Rampaging"
+ mhs_durin.14.desc:0 "With the loss of control we are unable to defend our citizens, they are helpless against the hordes."
+
+ #We succesfully defended the planet against the horrors initial attack.
+ mhs_durin.15.name:0 "Victory"
+ mhs_durin.15.desc:0 "The abominations did not foresee our might, the ones who are still alive have scurried back to the depths from which they came."
+
+ # We have successfully reconquered the planet.
+ mhs_durin.16.name:0 "Reconquest"
+ mhs_durin.16.desc:0 "We have successfully reclaimed our rightful heritage from the abominations, the citizens who have managed to survived are back under our protection once again."
+
+ #A small group of citizens have barricaded themselves.
+ mhs_durin.18.name:0 "Isolated"
+ mhs_durin.18.desc:0 "The assaults of the horrors have claimed many lives, a small group of citizens have barricaded themselves in an area where they can't seem to be reached."
+ 
